@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.hotel</groupId>
   <artifactId>HotelReservationSystem</artifactId>
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>HotelReservationSystem</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+  </properties>
   <dependencies>
     <!-- Dependencia de PostgreSQL -->
     <dependency>
@@ -22,25 +26,32 @@
         <version>3.0.0</version>
     </dependency>
 
-   <!-- JUnit 5 -->
+   <!-- TestNG -->
     <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>5.10.0</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.10.0</version>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.7.0</version>
         <scope>test</scope>
     </dependency>
 
-    <!-- Plugin necesario para ejecutar pruebas con Maven -->
+     <!-- Dependencia de Mockito -->
     <dependency>
-        <groupId>org.apache.maven.surefire</groupId>
-        <artifactId>surefire-junit-platform</artifactId>
-        <version>2.22.2</version>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.5.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.5.0</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>5.0.1</version>
     </dependency>
   </dependencies>
 
@@ -63,4 +74,5 @@
         </resource>
     </resources>
   </build>
+  
 </project>
